Fixes overflow on cells, caused by a conflict between flex and text-overflow.

--- a/src/_sass/components/videoplayer/_score-nohkan.scss
+++ b/src/_sass/components/videoplayer/_score-nohkan.scss
@@ -1,7 +1,3 @@
 .cell--nohkan {
   position: relative;
-
-  span {
-    @include tooltip();
-  }
 }
